--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         }
 
         button:hover {
-            background-color: #444;
+            background-color: #f7f7f7;
             transform: scale(1.05);
         }
 
