--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 
 <div class="info-text2"></div>
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-        <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
+        <div class="info-text">※メニューを選択すると下に項目が表示されます</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('beautifuleyebrows')">エアコンクリーニング</button>
             <button type="button" onclick="showMenu('shinyskin')">水まわりのお掃除</button>
@@ -1162,7 +1162,7 @@
                 let updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
 
                 // もし選択数が3を超えたら、新しい選択をキャンセル
-                if (updatedSelectedButtons.length >= 3) {
+                if (updatedSelectedButtons.length >= 10) {
                     return;
                 }
 
