--- a/index.html
+++ b/index.html
@@ -870,7 +870,14 @@
             'パウダー✖️毛並み眉（4D）': 240,
             'パウダー×毛並み眉（4D）２ヶ月いないのリタッチ': 240,
             'ララピール': 60,
-            'ララピール＋導入美顔器': 120
+            'ララピール＋導入美顔器': 120,
+            'ララピール90分【初回の方限定】11000円→6000円': 90,
+            'ララピール60分コース9000円': 60,
+            'ララピール60分3回コース27000円→22000円': 60,
+            'ララピール60分5回コース＋1回54000円→40000円': 60,
+            'ララピール90分コース11000円': 90,
+            'ララピール90分コース3回コース33000円→28000円': 90,
+            'ララピール90分コース5回コース＋1回64000円→50000円': 90
         };
 
         let selectedMenuTime = 0;
