--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,7 @@ button.active {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご来店回数：${formData.visitCount}\n\n高校生以下ですか？：${formData.highschoolCount}\n\nメニュー：${formData.selectedSymptom}\n\n【希望日時】\n営業時間外希望\n${formData.selectedSymptom}\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご来店回数≫\n⇒${formData.visitCount}\n\n≪メニュー≫\n⇒${formData.selectedSymptom}\n\n【希望日時】\n≪営業時間外希望≫\n${formData.selectedSymptom}\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
