--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@ button.active {
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
             const yoyakusitaihi = document.getElementById('yoyakusitaihi').value;
-            const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
+            const visitCountText = visitCount ? `・<span style="color:#13ca5e;"><strong>ご来店回数</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
             const selectedMenuText = selectedMenu ? `<span style="color:#13ca5e;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
@@ -1409,7 +1409,7 @@ button.active {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご来店回数≫\n⇒${formData.visitCount}\n\n≪メニュー≫\n⇒${formData.selectedSymptom}\n\n【希望日時】\n≪営業時間外希望≫\n${formData.selectedSymptom}\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`
+                text: `【予約フォーム】\n≪お名前≫\n⇒${formData.name}\n\n≪電話番号≫\n⇒${formData.phone}\n\n≪ご来店回数≫\n⇒${formData.visitCount}\n\n≪メニュー≫\n⇒${formData.selectedSymptom}\n\n【希望日時】\n≪営業時間外希望≫\n${formData.yoyakusitaihi}\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n⇒${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
