--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
     </div>
 
     <div class="container">
-        <h1>Ranty NAIL<br>予約フォーム
+        <h1>ああああああ<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
