--- a/index.html
+++ b/index.html
@@ -1306,14 +1306,14 @@ if (selectedSymptom && selectedSymptom.length > 0) {
 
         function submitForm() {
             const formData = {
-                name: document.getElementById('name').value.trim(),
-                phone: document.getElementById('phone').value.trim(),
-                visitCount: visitCount,
-                selectedMenu: selectedMenu,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
-                irradiationsCount: irradiationsCount,
-                dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
-                message: document.getElementById('message').value.trim()
+    name: document.getElementById('name').value.trim(),
+    phone: document.getElementById('phone').value.trim(),
+    visitCount: visitCount,
+    selectedMenu: selectedMenu,
+    selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? JSON.stringify(selectedSymptom) : null,
+    irradiationsCount: irradiationsCount,
+    dates: selectedFullDate ? [selectedFullDate] : null,
+    message: document.getElementById('message').value.trim()
             };
 
             // フォームデータのチェック
