--- a/index.html
+++ b/index.html
@@ -776,9 +776,9 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">自店オフ</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">他店オフ</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">亀裂矯正</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">オプション：自店オフ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">オプション：他店オフ</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">オプション：亀裂矯正</button>
             </div>
         </div>
 
@@ -798,8 +798,8 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">自店オフ</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">他店オフ</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">オプション：自店オフ</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">オプション：他店オフ</button>
             </div>
         </div>
 
@@ -817,8 +817,8 @@
                 <span class="highlight-text">◆オフのみ◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="オフのみ" data-price="15000">自店オフ</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="オフのみ" data-price="15000">他店オフ</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="オフのみ" data-price="15000">オプション：自店オフ</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="オフのみ" data-price="15000">オプション：他店オフ</button>
             </div>
         </div>
 
